// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Synchronize enables "Continue" 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1>
          Waiting for team
        </h1>
        <p>
          You're quick! Let's wait for the rest of your team.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Memo(Connect(StartOver))>
    <withRouter(LinkContainer)
      to="/question/1"
    >
      <ForwardRef(Bootstrap(Button))
        variant="success"
      >
        Continue
      </ForwardRef(Bootstrap(Button))>
    </withRouter(LinkContainer)>
  </Memo(Connect(StartOver))>
</ForwardRef(Bootstrap(Container))>
`;

exports[`components/Synchronize matches snapshot 1`] = `
<ForwardRef(Bootstrap(Container))>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))>
      <ForwardRef(Bootstrap(Jumbotron))>
        <h1>
          Waiting for team
        </h1>
        <p>
          You're quick! Let's wait for the rest of your team.
        </p>
      </ForwardRef(Bootstrap(Jumbotron))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
  <Memo(Connect(StartOver))>
    <withRouter(LinkContainer)
      to="/question/1"
    >
      <ForwardRef(Bootstrap(Button))
        disabled={true}
        variant="success"
      >
        Continue
      </ForwardRef(Bootstrap(Button))>
    </withRouter(LinkContainer)>
  </Memo(Connect(StartOver))>
</ForwardRef(Bootstrap(Container))>
`;
